# alice

./: CHANGES.md  alice.opam  dune-project
.github/workflows/: release.yml  test.yml
alice/src/: add.ml  add.mli  alice.ml  build.ml  common.ml  common.mli  dot.ml  dune  run.ml  tools.ml
dag/src/: alice_dag.ml  alice_dag.mli
dune.lock/: climate.pkg  containers.pkg  fileutils.pkg  kdl.pkg  lock.dune  ocaml-config.pkg  ocaml-system.pkg  ocaml.pkg
engine/src/: build_graph.ml  build_graph.mli  dune  lock_engine.ml  lock_engine.mli  ocamldep_cache.ml  ocamldep_cache.mli  project.ml  project.mli  public_interface_to_open.ml  public_interface_to_open.mli  scheduler.ml  scheduler.mli  typed_op.ml  typed_op.mli
examples/test_lockfile/: .gitignore  Alice.kdl
integration_tests/: multi-file.t
integration_tests/opam-dependencies.t/: run.t
io/src/: alice_io.ml  dune  file_ops.ml  io_ctx.ml  io_ctx.mli  num_jobs.ml  num_jobs.mli  process.ml  process.mli  temp_dir.ml  temp_dir.mli
manifest/src/: alice_manifest.ml  alice_manifest.mli  alice_opam.ml  alice_opam.mli  dune  lockfile.ml  lockfile.mli
nix/overlay/: default.nix  development.nix  versioned.nix
nix/package/: alice.nix  dev-shell.nix  tools.nix
ocaml_compiler/src/: ocaml_compiler.ml  ocaml_compiler.mli
package/src/: dependency_graph.ml  dependency_graph.mli  package.ml  package.mli
package_meta/src/: dune
scripts/: build-alice-aarch64-linux-gnu.dockerfile
stdlib/src/: alice_stdlib.ml  array.mli  list.ml  list.mli  nonempty_list.ml  nonempty_list.mli  seq.ml  seq.mli
types/src/: alice_types.ml  dune  (+1 more)
(+2 files in other folders)
